# cloco-nepal-internship-2025

./: README.md
2025-01-20/bash-script-task/: myscript.sh
2025-01-21/cronjob/: top_processes.sh
2025-01-22/flexbox-grid-task/: index.html  style.css
2025-01-22/html-semantics-task/: semantics.css  semantics.html
2025-01-23/js-practice/: index.html
2025-01-23/js-toggle-paragraph-task/: toggle.html
2025-01-24/Ajax intro/: ajx.html  data.txt
2025-01-24/Form Validation /: formvalidation.html
2025-01-27/API test/: apipoke.html  apipoke.js  formjson.html
2025-01-28/higher_order_functions/: filter.js  forEach.js  index.html  map.js  reduce.js
2025-01-28/higher_order_task/: data.js  index.html  script.js  style.css
2025-01-29/typescript intro/: basic.js  basic.ts  index.html
2025-01-30/form-crud-task/: package-lock.json  package.json
2025-01-31/: package-lock.json
2025-01-31/todoform/: package-lock.json  package.json
2025-02-02/next-app/: package-lock.json
2025-02-03/react-lifecycle/: package-lock.json
2025-02-04/shadcn-app/: db.json  package-lock.json  package.json  server.js
2025-02-12/: ERD.drawio  Postgresql practice notes  table insertion
2025-02-13/: Normalization Task.ods
2025-02-19/mysite/: db.sqlite3  pyproject.toml
2025-02-19/mysite/books/: admin.py  models.py  urls.py  views.py
2025-02-19/mysite/books/migrations/: 0001_initial.py
2025-02-19/mysite/books/templates/: book_list.html
2025-02-19/mysite/mysite/: admin.py  settings.py  urls.py  views.py
2025-03-19/JWT_tokens/: create.py  pyproject.toml
(+38 files in other folders)
