[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["aashiro1 <shakyaaashish@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.10"
virtualenv = "^20.29.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
