[project]
name = "jwt-tokens"
version = "0.1.0"
description = ""
authors = [
    {name = "aashiro1",email = "shakyaaashish@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "shell (>=1.0.1,<2.0.0)",
    "jwt (>=1.3.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
